[package]
name = "nultr-shared-lib"
version = "0.1.0"
edition = "2024"
authors = ["sterrlia <dev@sterrlia.com>"]
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["std", "serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rust-api-kit = "0.1.1"
